--- a/mk/shared.mk.in
+++ b/mk/shared.mk.in
@@ -243,6 +243,7 @@ EHCLIB_SHARED						:= @EHCLIB_SHARED@
 AGC							:= @UUAGC_CMD@
 SHUFFLE						:= @SHUFFLE_CMD@
 RULER2						:= @RULER_CMD@
+UHC							:= @UHC_CMD@
 GHC							:= @GHC_CMD@
 GHC1						:= @GHC_CMD1@
 GHC_VERSION         		:= @GHC_VERSION@
